// Copyright 2015 Google Inc. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";

message MetricValue {
  int64 IntValue = 1;
  double FloatValue = 2;
  string MetricType = 3;
  string ValueType = 4;
}

message MetricPoint {
  string name = 1;
  MetricValue value = 2;
  google.protobuf.Timestamp timestamp = 3;
  map<string, string> tags = 4;
}

message Empty {}

service MetricPlugin {
  rpc WriteMetricsPoint(MetricPoint) returns (Empty);
}